# homebrew-dcm2jpeg

./: .gitignore  CLAUDE.md  LICENSE  README.md  dcm2jpeg.py  justfile  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-formula.yml
Formula/: dcm2jpeg.rb
tests/: test_dcm2jpeg.py
